@@ -1,5 +1,10 @@
 2004-11-23 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Dialog_Partition_New.cc,
+	  src/Win_GParted.cc: Fixed some errors with 'unknown' filesystem. + some cosmetics
+
+2004-11-23 Bart Hakvoort  <gparted@users.sf.net>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc,
 	  src/Makefile.am,
